--- a/index.html
+++ b/index.html
@@ -15821,9 +15821,14 @@ class="
 
 </div>
 <div class="project-buttons">
-  <a href="https://github.com/your-username/your-repository" class="github-button" target="_blank">GitHub Repository</a>
-  <a href="path-to-download-file" class="download-button">Download</a>
+  <a href="https://github.com/idevmou/Sales-Analysis-for-an-E-commerce-Website" class="github-button" target="_blank">GitHub Repository</a>
+  <a href="https://github.com/idevmou/Sales-Analysis-for-an-E-commerce-Website/archive/refs/heads/main.zip" class="download-button">Download</a>
 </div>
+<footer>
+  <p>&copy; 2023 Your Name</p>
+  <p>Data: <a href="https://www.dofactory.com/sql/sample-database" target="_blank">Your Dataset</a> (Open Source)</p>
+  <p>Analysis Performed by: Mouli Sankar</p>
+</footer>
 
 </body>
 
