--- a/index.html
+++ b/index.html
@@ -94,6 +94,24 @@ a hack to deal with our current css styles and no new styling should be added in
 .download-button:hover {
   background-color: #0056b3;
 }
+footer {
+  background-color: #f0f0f0;
+  padding: 20px;
+  text-align: center;
+}
+
+footer p {
+  margin-bottom: 10px;
+}
+
+footer a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
 
 /*-----------------------------------------------------------------------------
 | Copyright (c) Jupyter Development Team.
