--- a/index.html
+++ b/index.html
@@ -15844,7 +15844,7 @@ class="
   <a href="https://github.com/idevmou/Sales-Analysis-for-an-E-commerce-Website/archive/refs/heads/main.zip" class="download-button">Download</a>
 </div>
 <footer>
-  <p>&copy; 2023 Your Name</p>
+  <p>&copy; 2023 idevmou</p>
   <p>Data: <a href="https://www.dofactory.com/sql/sample-database" target="_blank">Your Dataset</a> (Open Source)</p>
   <p>Analysis Performed by: Mouli Sankar</p>
 </footer>
